agregue un tagert _blank para que se abra en otra pestaña mi lintree

--- a/html/index.html
+++ b/html/index.html
@@ -36,7 +36,7 @@
                     <p class="text_cuenta--pregunta">¿No tienes una cuenta?</p>
                     <a class="text-link--cuenta" href="#">Crear una cuenta</a>
                 
-                    <a class="derechos" href="https://linktr.ee/jackreategui">By Jack Reátegui</a>
+                    <a target="_blank" class="derechos" href="https://linktr.ee/jackreategui">By Jack Reátegui</a>
                 </div>
             </div>
         </div>
