termine de darles estilos con css y js al menu

--- a/html/index.html
+++ b/html/index.html
@@ -19,7 +19,7 @@
             <img class="cuenta_icon" src="../assets/icon/perfil_icon.svg" alt="perfil">
 
             <div class="menu_overlay">
-                <div class="container_menu">
+                <div class="container_menu animate__fadeInUp animate__animated">
                     <img class="icon--cerrar" src="../assets/icon/equis_icon.svg" alt="">
                     <div class="container_login">
                         <a href="#">
