agregue inputs para que los usuarios escriban en las tareas

--- a/html/index.html
+++ b/html/index.html
@@ -44,7 +44,7 @@
 
     <div class="header_container">
         <div class="header--info">
-            <h3 class="info-h3">To-do-list</h3>
+            <input class="info-h3" type="text" placeholder="Sin título" value="Título de lista">
             <p class="info-p-tareas">6 tareas - 4 completos</p>
         </div>
         <img class="plus_icon" src="../assets/icon/anadir_icon.svg" alt="añadir">
@@ -54,7 +54,7 @@
         <div class="task--row">
             <img class="no_marcado--task" src="../assets/icon/no_marcado_icon.svg" alt="no marcado">
             <div class="container-text--task">
-                <p class="text--task">Limpiar habitación</p>
+                <input class="text--task" placeholder="Tarea" value="">
             </div>
             <img src="../assets/icon/basura_icon.svg" alt="" class="no_borrado--task">
         </div>
@@ -62,7 +62,7 @@
         <div class="task--row">
             <img class="no_marcado--task" src="../assets/icon/no_marcado_icon.svg" alt="no marcado">
             <div class="container-text--task">
-                <p class="text--task">Limpiar habitación</p>
+                <input class="text--task" placeholder="Tarea" value="">
             </div>
             <img src="../assets/icon/basura_icon.svg" alt="" class="no_borrado--task">
         </div>
@@ -70,15 +70,7 @@
         <div class="task--row">
             <img class="no_marcado--task" src="../assets/icon/no_marcado_icon.svg" alt="no marcado">
             <div class="container-text--task">
-                <p class="text--task">Limpiar habitación</p>
-            </div>
-            <img src="../assets/icon/basura_icon.svg" alt="" class="no_borrado--task">
-        </div>
-
-        <div class="task--row">
-            <img class="no_marcado--task" src="../assets/icon/no_marcado_icon.svg" alt="no marcado">
-            <div class="container-text--task">
-                <p class="text--task">Limpiar habitación</p>
+                <input class="text--task" placeholder="Tarea" value="">
             </div>
             <img src="../assets/icon/basura_icon.svg" alt="" class="no_borrado--task">
         </div>
