agregue estilos y personalizacion con js para las tareas

--- a/html/index.html
+++ b/html/index.html
@@ -52,27 +52,11 @@
 
     <main class="container_task">
         <div class="task--row">
-            <img class="no_marcado--task" src="../assets/icon/no_marcado_icon.svg" alt="no marcado">
+            <div class="no_marcado--task"></div>
             <div class="container-text--task">
                 <input class="text--task" placeholder="Tarea" value="">
             </div>
-            <img src="../assets/icon/basura_icon.svg" alt="" class="no_borrado--task">
-        </div>
-
-        <div class="task--row">
-            <img class="no_marcado--task" src="../assets/icon/no_marcado_icon.svg" alt="no marcado">
-            <div class="container-text--task">
-                <input class="text--task" placeholder="Tarea" value="">
-            </div>
-            <img src="../assets/icon/basura_icon.svg" alt="" class="no_borrado--task">
-        </div>
-
-        <div class="task--row">
-            <img class="no_marcado--task" src="../assets/icon/no_marcado_icon.svg" alt="no marcado">
-            <div class="container-text--task">
-                <input class="text--task" placeholder="Tarea" value="">
-            </div>
-            <img src="../assets/icon/basura_icon.svg" alt="" class="no_borrado--task">
+            <div class="no_borrado--task"></div>
         </div>
     </main>
     <script src="../js/main.js"></script>
