termine de armar las funciones para las tareas

--- a/html/index.html
+++ b/html/index.html
@@ -51,13 +51,13 @@
     </div>
 
     <main class="container_task">
-        <div class="task--row">
+        <!-- <div class="task--row">
             <div class="no_marcado--task"></div>
             <div class="container-text--task">
                 <input class="text--task" placeholder="Tarea" value="">
             </div>
             <div class="no_borrado--task"></div>
-        </div>
+        </div> -->
     </main>
     <script src="../js/main.js"></script>
 </body>
