agregue un logo en la pestaña

--- a/html/index.html
+++ b/html/index.html
@@ -8,6 +8,7 @@
     <title>TaskLift</title>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+    <link rel="icon" href="../assets/img/icon_logo.png">
     <link rel="stylesheet" href="../css/main.css">
 </head>
 <body>
@@ -45,7 +46,7 @@
     <div class="header_container">
         <div class="header--info">
             <input class="info-h3" type="text" placeholder="Sin título" value="Título de lista">
-            <p class="info-p-tareas">6 tareas - 4 completos</p>
+            <!-- <p class="info-p-tareas">6 tareas - 4 completos</p> -->
         </div>
         <img class="plus_icon" src="../assets/icon/anadir_icon.svg" alt="añadir">
     </div>
